Closed #3. Added Selenium dependency. Added enum with browser types and simple implementation of WDM

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.141.59</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
