--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <version>3.141.59</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>6.1.0</version>
+        </dependency>
+
 
     </dependencies>
 
