Closed #6. Added dependency. Added logic to download browser driver binaries of specified versions

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,18 @@
             <version>6.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.10</version>
+        </dependency>
+
     </dependencies>
 
 </project>
