--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
-    <groupId>com.wixpress.automation</groupId>
+    <parent>
+        <groupId>com.wix</groupId>
+        <artifactId>wix-oss-java-parent</artifactId>
+        <version>0.38.0</version>
+    </parent>
+
+    <groupId>com.wix</groupId>
     <artifactId>wix-webdriver-manager</artifactId>
     <version>1.0.0</version>
 
@@ -15,15 +21,23 @@
 
     <licenses>
         <license>
-            <name>Apache License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
 
     <scm>
         <url>https://github.com/wix/wix-webdriver-manager</url>
+        <connection>scm:git:git://github.com/wix/wix-webdriver-manager.git</connection>
+        <developerConnection>scm:git:git@github.com:wix/wix-webdriver-manager.git</developerConnection>
+        <tag>HEAD</tag>
     </scm>
+
+    <issueManagement>
+        <url>https://github.com/wix/wix-webdriver-manager/issues</url>
+        <system>GitHub Issues</system>
+    </issueManagement>
 
     <build>
         <plugins>
