--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>com.wix</groupId>
     <artifactId>wix-webdriver-manager</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <name>Wix WebDriver Manager</name>
     <description>Module on creating any web-driver on any supported environment</description>
