--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
@@ -13,7 +11,7 @@
 
     <groupId>com.wix</groupId>
     <artifactId>wix-webdriver-manager</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>Wix WebDriver Manager</name>
     <description>Module on creating any web-driver on any supported environment</description>
@@ -31,7 +29,7 @@
         <url>https://github.com/wix/wix-webdriver-manager</url>
         <connection>scm:git:git://github.com/wix/wix-webdriver-manager.git</connection>
         <developerConnection>scm:git:git@github.com:wix/wix-webdriver-manager.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>1.0.0</tag>
     </scm>
 
     <issueManagement>
